--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap');
+
 .active{
     @apply text-blue-600 underline underline-offset-4
+}
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 2px;
+}
+
+.pagination li {
+ margin: 0 5px;
+}
+
+.pagination a{
+    display: inline-block;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-decoration: none;
+}
+
+.pagination a:hover{
+    background: #eee;
+}
+
+.pagination li.activePagination{
+    color: white;
+    background: rgb(35, 63, 219);
 }
